--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.5.2
+dj-rest-auth==3.0.0
 Django==4.1.2
 django-naomi==0.8
+djangorestframework==3.14.0
 psycopg2==2.9.5
 python-decouple==3.6
+pytz==2022.7.1
 sqlparse==0.4.3
