--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,8 @@
-image: "python:3.10
+image: "python:3.6"
 
 before_script:
-  - apt-get update && apt-get install -y \
-    binutils \
-    libproj-dev \
-    gdal-bin \
-    git 
+  - apt-get update -qy
+  - apt-get install -y python-dev python-pip  
   - pip install -r requirements.txt
 
 stages:
