--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,11 @@
-image: "python:3.6"
+image: "python:3.10"
 
 before_script:
-  - apt-get update -qy
-  - apt-get install -y python-dev python-pip  
+  - apt-get -qq update && apt-get -qq install -y python
+  - apt-get -qq update
+  - apt-get -qq install -y python python-virtualenv python-pip
+  - virtualenv venv
+  - . venv/bin/activate
   - pip install -r requirements.txt
 
 stages:
