--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 dj-rest-auth==3.0.0
 Django==4.1.2
+django-cors-headers==3.13.0
 django-naomi==0.8
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
