--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,9 @@ SECRET_KEY=your_secret_key
 ALLOWED_HOSTS=127.0.0.1,.herokuapp.com,localhost
 DJANGO_ENVIRONMENT_SETTINGS=dev
 
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:3000
+
 # DATABASE
 DATABASE_NAME=sample_db
 DATABASE_USER=user
@@ -17,3 +20,4 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_HOST_USER=sample@email.com
 EMAIL_HOST_PASSWORD=sample_pass
 EMAIL=sample@email.com
+
