--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,8 @@ variables:
 before_script:
   - apt-get update -qy
   - apt-get install -y python3-dev python3-pip  
-  - pip install -r requirements.txt
+  - pip install pipenv
+  - pipenv install
 
 stages:
   - Python Lint
@@ -21,10 +22,10 @@ stages:
 flake8:
   stage: Python Lint
   script:
-    - flake8
+    - pipenv run flake8
 
 test:
   stage: Django Tests
   script:
     # Runs tests everytime a commit is created to check that all test is passing
-    - python manage.py test
+    - pipenv run python manage.py test
